tests/test_typing/bad/err1.catala_en
> Include: common.catala_en

```catala
scope S:
  definition z equals [
    Structure { -- i: 3 -- e: Int content x };
    Structure { -- i: 4.1 -- e: y };
    Structure { -- i: 5 -- e: Dat content |1970-01-01| }
  ]
  definition a equals number of (z ++ z) / 2
```

```catala-test-inline
$ catala Typecheck
[ERROR] Error during typechecking, incompatible types:
--> decimal
--> integer

Error coming from typechecking the following expression:
┌─⯈ tests/test_typing/bad/err1.catala_en:7.22-25:
└─┐
7 │     Structure { -- i: 4.1 -- e: y };
  │                       ‾‾‾
  └─ return code 124#

Type decimal coming from expression:
┌─⯈ tests/test_typing/bad/err1.catala_en:7.22-25:
└─┐
7 │     Structure { -- i: 4.1 -- e: y };
  │                       ‾‾‾
  └─ return code 124#

Type integer coming from expression:
┌─⯈ tests/test_typing/bad/common.catala_en:8.17-24:
└─┐
8 │   data i content integer
  │                  ‾‾‾‾‾‾‾

#return code 255#
```
